Restructed code with async and cache